// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entity denormalization can denormalize already partially denormalized data 1`] = `
Array [
  Menu {
    "food": Food {
      "id": "1",
    },
    "id": "1",
  },
  true,
]
`;

exports[`Entity denormalization can denormalize already partially denormalized data 2`] = `
Array [
  Menu {
    "food": Food {
      "id": "1",
    },
    "id": "1",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes an entity 1`] = `
Array [
  Tacos {
    "alias": undefined,
    "id": "1",
    "name": "",
    "type": "foo",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes an entity 2`] = `
Array [
  Tacos {
    "alias": undefined,
    "id": "1",
    "name": "",
    "type": "foo",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities 1`] = `
Array [
  Menu {
    "food": Food {
      "id": "1",
    },
    "id": "1",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities 2`] = `
Array [
  Menu {
    "food": Food {
      "id": "1",
    },
    "id": "1",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities 3`] = `
Array [
  Menu {
    "food": Food {
      "id": undefined,
    },
    "id": "2",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities 4`] = `
Array [
  Menu {
    "food": Food {
      "id": undefined,
    },
    "id": "2",
  },
  false,
]
`;

exports[`Entity denormalization denormalizes deep entities with records 1`] = `
Array [
  Menu {
    "food": Food {
      "id": "1",
    },
    "id": "1",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities with records 2`] = `
Array [
  Menu {
    "food": Food {
      "id": "1",
    },
    "id": "1",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities with records 3`] = `
Array [
  Menu {
    "food": null,
    "id": "2",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes deep entities with records 4`] = `
Array [
  Menu {
    "food": null,
    "id": "2",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes recursive dependencies 1`] = `
Array [
  Report {
    "draftedBy": User {
      "id": "456",
      "reports": Array [
        [Circular],
      ],
      "role": "manager",
    },
    "id": "123",
    "publishedBy": User {
      "id": "456",
      "reports": Array [
        [Circular],
      ],
      "role": "manager",
    },
    "title": "Weekly report",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes recursive dependencies 2`] = `
Array [
  Report {
    "draftedBy": User {
      "id": "456",
      "reports": Immutable.List [
        Immutable.Map {
          "id": "123",
          "title": "Weekly report",
          "draftedBy": "456",
          "publishedBy": "456",
        },
      ],
      "role": "manager",
    },
    "id": "123",
    "publishedBy": User {
      "id": "456",
      "reports": Immutable.List [
        Immutable.Map {
          "id": "123",
          "title": "Weekly report",
          "draftedBy": "456",
          "publishedBy": "456",
        },
      ],
      "role": "manager",
    },
    "title": "Weekly report",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes recursive dependencies 3`] = `
Array [
  User {
    "id": "456",
    "reports": Array [
      Report {
        "draftedBy": [Circular],
        "id": "123",
        "publishedBy": [Circular],
        "title": "Weekly report",
      },
    ],
    "role": "manager",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes recursive dependencies 4`] = `
Array [
  User {
    "id": "456",
    "reports": Immutable.List [
      Report {
        "draftedBy": Immutable.Map {
          "id": "456",
          "role": "manager",
          "reports": Immutable.List [
            "123",
          ],
        },
        "id": "123",
        "publishedBy": Immutable.Map {
          "id": "456",
          "role": "manager",
          "reports": Immutable.List [
            "123",
          ],
        },
        "title": "Weekly report",
      },
    ],
    "role": "manager",
  },
  true,
]
`;

exports[`Entity denormalization denormalizes to undefined for missing data 1`] = `
Array [
  Menu {
    "food": undefined,
    "id": "1",
  },
  false,
]
`;

exports[`Entity denormalization denormalizes to undefined for missing data 2`] = `
Array [
  Menu {
    "food": undefined,
    "id": "1",
  },
  false,
]
`;

exports[`Entity denormalization denormalizes to undefined for missing data 3`] = `
Array [
  undefined,
  false,
]
`;

exports[`Entity denormalization denormalizes to undefined for missing data 4`] = `
Array [
  undefined,
  false,
]
`;
